Fix css issue on safari and ios

--- a/assets/css/memory.css
+++ b/assets/css/memory.css
@@ -45,6 +45,7 @@ body {
 
 .music-icon i:hover {
     transform: scale(1.3);
+    -webkit-transform: scale(1.3);
     cursor: pointer;
     color: #BD8025;
 }
@@ -65,6 +66,7 @@ body {
 .restart-icon i:hover {
     color: #BD8025;
     transform: scale(1.3);
+    -webkit-transform: scale(1.3);
 }
 
 /* --------- Memory Game ------------- */
@@ -132,9 +134,11 @@ div.card {
     align-items: center;
     overflow: hidden;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     border-radius: 12px;
     border: 1px solid orange;
     transition: transform 500ms ease-in-out;
+    -webkit-transition: transform 500ms ease-in-out;
 }
 
 @keyframes overlay-grow {
@@ -151,12 +155,14 @@ div.card {
 
 .visible .card-back {
     transform: rotateY(-180deg);
+    -webkit-transform: rotateY(-180deg);
     width: 125px;
     height: 175px;
 }
 
 .visible .card-front {
     transform: rotateY(0);
+    -webkit-transform: rotateY(0);
     width: 125px;
     height: 175px;
 }
@@ -168,6 +174,7 @@ div.card {
 
 .card-front {
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
     overflow: hidden;
 }
 
@@ -210,6 +217,7 @@ div.card {
     display: flex;
     flex-direction: column;
     animation: overlay-grow 500ms forwards;
+    -webkit-animation: overlay-grow 500ms forwards;
 }
 
 .overlay-text-small i {
@@ -261,4 +269,5 @@ footer i {
 footer i:hover {
     color: #BD8025;
     transform: scale(1.1);
+    -webkit-transform: scale(1.1);
 }
